--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "./",
-  "name": "ygov-finance",
+  "name": "seedz.social",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
